大枠の記述

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Diary</title>
     <link rel="stylesheet" href="destyle.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="main-visual"></div>
+        <section class="detail">
+            <h1 class="detail__title"></h1>
+            <ul class="detail__material"></ul>
+            <ul class="detail__how-to-make"></ul>
+        </section>
+        <div class="other-recipe"></div>
+    </main>
+    <footer>
+        <ul class="sns"></ul>
+        <p class="copyright"></p>
+    </footer>
 </body>
 </html>
