大枠の修正と追記

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -10,16 +10,43 @@
 </head>
 <body>
     <main>
-        <div class="main-visual"></div>
-        <section class="detail">
-            <h1 class="detail__title"></h1>
-            <ul class="detail__material"></ul>
-            <ul class="detail__how-to-make"></ul>
-        </section>
+        <div class="main-container">
+            <div class="main-visual"></div>
+            <div class="content-wrapper">
+                <section class="detail">
+                    <h1 class="detail__title"></h1>
+                    <p class="detail__text"></p>
+                </section>
+                <section class="ingredients">
+                    <h2 class="ingredients__title"></h2>
+                    <ul class="ingredients__list">
+                        <li class="ingredients__item"></li>
+                        <li class="ingredients__item"></li>
+                        <li class="ingredients__item"></li>
+                        <li class="ingredients__item"></li>
+                        <li class="ingredients__item"></li>
+                    </ul>
+                </section>
+                <section class="how-to-make">
+                    <h2 class="how-to-make__title"></h2>
+                    <ul class="how-to-make__list">
+                        <li class="how-to-make__item"></li>
+                        <li class="how-to-make__item"></li>
+                        <li class="how-to-make__item"></li>
+                        <li class="how-to-make__item"></li>
+                        <li class="how-to-make__item"></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
         <div class="other-recipe"></div>
     </main>
     <footer>
-        <ul class="sns"></ul>
+        <ul class="sns">
+            <li class="sns__item"></li>
+            <li class="sns__item"></li>
+            <li class="sns__item"></li>
+        </ul>
         <p class="copyright"></p>
     </footer>
 </body>
