detailのコンテンツ追加

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -14,8 +14,9 @@
             <div class="main-visual"></div>
             <div class="content-wrapper">
                 <section class="detail">
-                    <h1 class="detail__title"></h1>
-                    <p class="detail__text"></p>
+                    <h1 class="detail__title">ひよこ豆とアボガドのタコス</h1>
+                    <p class="detail__text">たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少
+                        しライムを絞ったらおいしいタコスのできあがりです。</p>
                 </section>
                 <section class="ingredients">
                     <h2 class="ingredients__title"></h2>
@@ -41,6 +42,7 @@
         </div>
         <div class="other-recipe"></div>
     </main>
+
     <footer>
         <ul class="sns">
             <li class="sns__item"></li>
