ingredientsの要素追加

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -19,13 +19,13 @@
                         しライムを絞ったらおいしいタコスのできあがりです。</p>
                 </section>
                 <section class="ingredients">
-                    <h2 class="ingredients__title"></h2>
+                    <h2 class="ingredients__title">材料（2人分）</h2>
                     <ul class="ingredients__list">
-                        <li class="ingredients__item"></li>
-                        <li class="ingredients__item"></li>
-                        <li class="ingredients__item"></li>
-                        <li class="ingredients__item"></li>
-                        <li class="ingredients__item"></li>
+                        <li class="ingredients__item">ひよこ豆<span class="ingredients__quantity">1個</span></li>
+                        <li class="ingredients__item">レンズ豆<span class="ingredients__quantity">1個</span></li>
+                        <li class="ingredients__item">アボカド<span class="ingredients__quantity">1個</span></li>
+                        <li class="ingredients__item">トマト<span class="ingredients__quantity">1個</span></li>
+                        <li class="ingredients__item">タコス<span class="ingredients__quantity">1個</span></li>
                     </ul>
                 </section>
                 <section class="how-to-make">
