how-to-makeの要素追加とタグ

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -29,14 +29,14 @@
                     </ul>
                 </section>
                 <section class="how-to-make">
-                    <h2 class="how-to-make__title"></h2>
-                    <ul class="how-to-make__list">
-                        <li class="how-to-make__item"></li>
-                        <li class="how-to-make__item"></li>
-                        <li class="how-to-make__item"></li>
-                        <li class="how-to-make__item"></li>
-                        <li class="how-to-make__item"></li>
-                    </ul>
+                    <h2 class="how-to-make__title">作り方</h2>
+                    <ol class="how-to-make__list">
+                        <li class="how-to-make__item">材料を洗う</li>
+                        <li class="how-to-make__item">材料を切る</li>
+                        <li class="how-to-make__item">タコス以外の材料を混ぜ合わせる</li>
+                        <li class="how-to-make__item">タコスに載せる</li>
+                        <li class="how-to-make__item">器に盛り付ける</li>
+                    </ol>
                 </section>
             </div>
         </div>
