ボタン追加

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -40,7 +40,9 @@
                 </section>
             </div>
         </div>
-        <div class="other-recipe"></div>
+        <div class="other-recipe">
+            <a href="#" class="other-recipe__list">レシピ一覧を見る</button>
+        </div>
     </main>
 
     <footer>
