フッターの要素追加

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -41,17 +41,17 @@
             </div>
         </div>
         <div class="other-recipe">
-            <a href="#" class="other-recipe__list">レシピ一覧を見る</button>
+            <a href="#" class="other-recipe__link">レシピ一覧を見る</button>
         </div>
     </main>
 
     <footer>
         <ul class="sns">
-            <li class="sns__item"></li>
-            <li class="sns__item"></li>
-            <li class="sns__item"></li>
+            <li class="sns__item"><a href="#" class="sns__link">Instagram</a></li>
+            <li class="sns__item"><a href="#" class="sns__link">Twitter</a></li>
+            <li class="sns__item"><a href="#" class="sns__link">Facebook</a></li>
         </ul>
-        <p class="copyright"></p>
+        <p class="copyright"><small>© 2021 Recipe Diary</small></p>
     </footer>
 </body>
 </html>
