--- a/sample2/index.html
+++ b/sample2/index.html
@@ -11,7 +11,9 @@
 <body>
     <main>
         <div class="main-container">
-            <div class="main-visual"></div>
+            <div class="main-visual">
+                <img src="img/recipe.jpg" class="main-visual__img">
+            </div>
             <div class="content-wrapper">
                 <section class="detail">
                     <h1 class="detail__title">ひよこ豆とアボガドのタコス</h1>
