メインビジュアル画像変更

--- a/sample2/index.html
+++ b/sample2/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="main-container">
             <div class="main-visual">
-                <img src="img/recipe.jpg" class="main-visual__img">
+                <img src="img/e-moran-MNctbZ6pa5c-unsplash.jpg" class="main-visual__img">
             </div>
             <div class="content-wrapper">
                 <section class="detail">
