--- a/sample2/index.html
+++ b/sample2/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="other-recipe">
-            <a href="#" class="other-recipe__link">レシピ一覧を見る</button>
+            <a href="#" class="other-recipe__link">レシピ一覧を見る</a>
         </div>
     </main>
 
